Automatically backed up by Learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,8 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-  
+      <form method="post" action="/">
+        <p>Your Word<input type="text" name="text">
+      </form>
   </body>
 </html>
