--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Pig Latinizer</h1>
       <form method="post" action="/">
-        <p>Your Word<input type="text" name="text">
+        <p>Your Word: <input type="text" name="text">
       </form>
   </body>
 </html>
