--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -8,6 +8,7 @@
     <h1>Pig Latinizer</h1>
       <form method="post" action="/">
         <p>Your Word: <input type="text" name="text"></p>
+        <input type="submit">
       </form>
   </body>
 </html>
